--- a/src/main/resources/templates/layout/group-post.html
+++ b/src/main/resources/templates/layout/group-post.html
@@ -241,65 +241,75 @@
     <!-- loading modal box end  -->
 
         <!-- edit modal box  -->
-        <div class="modal fade" id="editModalBox" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true">
-       <div class="modal-dialog">
-           <div class="modal-content">
-               <div class="modal-header">
-                   <h5 class="modal-title" id="staticBackdropLabel">Edit</h5>
-                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-               </div>
-               <div class="modal-body" id="editModal">
-                   ...
-               </div>
-               <div class="modal-footer">
-                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                   <button type="button" onclick="getUpdateData()" data-bs-dismiss="modal" class="btn btn-primary"
-                           data-bs-toggle="modal"  >Update
-                   </button>
+  
+
+        <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="postEditOffcanvas" aria-labelledby="offcanvasWithBothOptionsLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title font-monospace m-2" id="offcanvasWithBothOptionsLabel">Edit Post</h5>
+              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+               
+                       <div class="modal-body" id="editModal">
+                           ...
+                       </div>  
+                           <button type="button" onclick="getUpdateData()"   class="btn btn-primary"
+                           data-bs-dismiss="offcanvas"  aria-label="Close"  >Update
+                           </button>
+     
+                    
                </div>
            </div>
-       </div>
-   </div>
+       
 
 
 
-    <div class="modal fade" id="pollEventEditModalBox" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="staticBackdropLabel">Edit Event</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body" id="pollEventEditModal">
+      <!-- poll edit offcanvas start  -->
 
-                </div>
 
-            </div>
+
+      <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="pollEditOffcanvas" aria-labelledby="offcanvasWithBothOptionsLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Edit Poll</h5>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-    </div>
-
-    <!-- end edit modal box  -->
-
-
-        <!-- event edit moddal box start  -->
-
-        <div class="modal fade" id="eventEditModalBox" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="staticBackdropLabel-for-event-edit">Edit Event</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body" id="eventEditModal">
-
-                    </div>
-
-                </div>
-            </div>
+        <div class="offcanvas-body"> 
+                        <div class="modal-body" id="pollEventEditModal">
+        
+                        </div>
+        
+                   
+                
+            
         </div>
+      </div>
 
-        <!-- event edit modal box end  -->
+
+      <!-- poll edit offcanvas end  -->
+
+     <!-- event edit offcanvas start  -->
+
+
+
+     <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="eventEditOffcanvas" aria-labelledby="offcanvasWithBothOptionsLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title font-monospace m-2" id="offcanvasWithBothOptionsLabel">Edit announcement</h5>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            
+                        <div class="modal-body" id="eventEditModal">
+        
+                        </div>
+        
+                    
+               
+          
+        </div>
+      </div>
+
+
+      <!-- event edit offcanvas end  -->
 
 
 </main>
