--- a/src/main/resources/templates/layout/user-record.html
+++ b/src/main/resources/templates/layout/user-record.html
@@ -139,7 +139,12 @@
                     </div>
                 </div>
                 <div class="tab-pane fade" id="totalTab" role="tabpanel" aria-labelledby="polls-tab">
-                    <div id="trendyTotalList" class=" "></div>
+                    <div id="trendyTotalList" class=" ">
+                        <div>
+                            <input type="text" class="form-control" id="userSearch" placeholder="Search users" style="margin-right: 329px; width: 150px; height: 40px;"><br><br>
+                            <div id="pieChartContainer" style="display: flex; flex-wrap: wrap;"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
             </div>
@@ -148,5 +153,21 @@
         <div th:replace="~{index::footer}"></div>
         <script src="https://code.jquery.com/jquery-3.7.1.js"
                 integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+        <style>
+            .piechart-container {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: calc(100% / 3);
+                height: calc(100vh / 3);
+                margin-bottom: 80px;
+            }
+
+            .piechart {
+                width: 300px;
+                height: 300px;
+                border-radius: 50%;
+            }
+        </style>
     </body>
 </html>
