--- a/src/main/resources/templates/user/user-profile.html
+++ b/src/main/resources/templates/user/user-profile.html
@@ -41,12 +41,12 @@
                             <img onclick="showbgModal()" id="profile-background-img" src="/assets/img/pf-bg1.gif" style="position: absolute; top: 0; left: 0; width: 100%; height: 200px; object-fit: cover; " alt="pf-bg">
                             <div class="ms-4 mt-5 d-flex flex-column" style="width: 150px;">
                             <img id="profile-photo"  src="/assets/img/default-logo.png" alt="Profile" class="img-fluid img-thumbnail mt-4 mb-2 profile-photo"
-                                 style="width: 150px; z-index: 1; border-radius: 20px;" th:if="${user.photo == null}" onclick="chooseFile()"/>
+                                 style="width: 150px; z-index: 1; border-radius: 20px; min-height: 160px;" th:if="${user.photo == null}" onclick="chooseFile()"/>
                                 <form id="photoForm">
                                     <input class="form-control" type="file" name="file" id="file-input" style="display: none">
                                 </form>
                                 <img id="profile-photo-exist" th:unless="${user.photo == null}" th:src="${user.photo}" alt="Profile" class="img-fluid img-thumbnail mt-4 mb-2 profile-photo"
-                                  style="width: 150px; z-index: 1; border-radius: 20px;"  onclick="chooseFile()"/>
+                                  style="width: 150px; z-index: 1; border-radius: 20px; min-height: 160px;"  onclick="chooseFile()"/>
                             <button id="edit-photo-btn" type="button" class="btn btn-outline-dark edit-button" data-mdb-ripple-color="dark" style="z-index: 1;">Edit Profile</button>
                             Edit profile
                         </div>
@@ -55,25 +55,9 @@
                                 <p th:text="${user.role}">Role</p>
                             </div>
                         </div>
-                        <div class="p-4 text-black" style="background-color: #f8f9fa;">
-                            <div class="d-flex justify-content-end text-center py-1">
-                                <div>
-                                    <p class="mb-1 h5" th:text="${user.posts.size()}">253</p>
-                                    <p class="small text-muted mb-0">Posts</p>
-                                </div>
-                                <div class="px-3">
-                                    <p class="mb-1 h5">1026</p>
-                                    <p class="small text-muted mb-0">Images</p>
-                                </div>
-                                <div>
-                                    <p class="mb-1 h5">478</p>
-                                    <p class="small text-muted mb-0">Videos</p>
-                                </div>
-                            </div>
-                        </div>
                         <div class="card-body p-4 text-black">
                             <div class="mb-5">
-                                <p class="lead fw-normal mb-1">About</p>
+                                <p class="lead fw-normal mb-1" style="margin-top: 60px;">About</p>
                                 <div class="p-4" style="background-color: #f8f9fa;">
                                     <p class="font-italic mb-1">
                                         <strong>Date of Birth:</strong> <span th:text="${user.dob}?: 'Not provided'"></span>
@@ -87,7 +71,7 @@
                                     <p class="font-italic mb-1">
                                         <strong>Gender:</strong> <span th:text="${user.gender}?: 'Not provided'"></span>
                                     </p>
-                                    <button id="seeMoreBtn" class="btn btn-link">See more...</button>
+                                    <button id="seeMoreBtn" class="btn btn-link" style="margin-left: -18px; text-decoration: none; color: black;">See more...</button>
                                     <br>
                                     <div id="moreUserInfo" style="display: none;">
                                         <p class="font-italic mb-1">
@@ -102,9 +86,9 @@
                                         <p class="font-italic mb-1">
                                             <strong>Role:</strong> <span th:text="${user.role}?: 'Not provided'"></span>
                                         </p>
+                                        <strong>Hobbies:</strong>
+                                        <div id="hobbiesContainer"></div>
                                     </div>
-                                    <strong>Hobbies:</strong>
-                                    <div id="hobbiesContainer"></div>
                                 </div>
                             </div>
                         </div>
@@ -471,7 +455,6 @@
                         </div>
                         <script src="/assets/js/skill.js" defer></script>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
                     <button type="button" class="btn btn-primary" data-dismiss="modal" id="updateBtn">Update</button>
                 </form>
             </div>
