--- a/src/main/resources/templates/user/user-group.html
+++ b/src/main/resources/templates/user/user-group.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary" data-dismiss="modal" id="createCommunityBtn">Create</button>
+                        <button type="button" class="btn btn-primary" id="createCommunityBtn">Create</button>
                     </div>
                 </div>
             </div>
@@ -137,7 +137,8 @@
         </div>
     </div>
 </main>
-<div th:replace="~{index::footer}"></div>
+<!--<div th:replace="~{index::footer}"></div>-->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -156,9 +157,7 @@ async function goToCommunityDetail(id){
         const ownerId = document.getElementById('ownerId').value;
         const description = document.getElementById('description').value;
         const file = document.getElementById('file').value;
-
         let isValid = true;
-
         if (name.trim() === '') {
             document.getElementById('nameError').innerHTML = 'Name cannot be empty!';
             isValid = false;
@@ -187,28 +186,35 @@ async function goToCommunityDetail(id){
             document.getElementById('fileError').innerHTML = '';
         }
 
-        if (isValid) {
-            const formData = new FormData(document.getElementById('createCommunityForm'));
-            const url = "/api/community/createCommunity";
-            const data = await fetch(url, {
-                method: 'POST',
-                body: formData
-            });
-            if (data.ok) {
-                const result = await data.json();
-                await fetchCommunities();
-                const messageElement = document.getElementById('message');
-                $('#createCommunityModal').modal('hide');
-                document.getElementById('createCommunityForm').reset();
-                let alertMessage =  result.message;
-                let alertStyle = `
+        if(!isValid){
+            e.preventDefault();
+        }else{
+            $('#createCommunityModal').modal('hide');
+           await insertGroup();
+        }
+
+    });
+const insertGroup = async () => {
+    const formData = new FormData(document.getElementById('createCommunityForm'));
+    const url = "/api/community/createCommunity";
+    const data = await fetch(url, {
+        method: 'POST',
+        body: formData
+    });
+    if (data.ok) {
+        const result = await data.json();
+        await fetchCommunities();
+        const messageElement = document.getElementById('message');
+        document.getElementById('createCommunityForm').reset();
+        let alertMessage = result.message;
+        let alertStyle = `
             background-color: blue;
             color: white;
             border: 1px solid #cc0000;
              border-radius: 15px;
         `;
-                let styledAlert = document.createElement('div');
-                styledAlert.style.cssText = `
+        let styledAlert = document.createElement('div');
+        styledAlert.style.cssText = `
             ${alertStyle}
             position: fixed;
             top: 25%;
@@ -219,29 +225,29 @@ async function goToCommunityDetail(id){
             z-index: 10000;
             display: none;
         `;
-                styledAlert.innerHTML = alertMessage;
+        styledAlert.innerHTML = alertMessage;
 
 
-                document.body.appendChild(styledAlert);
+        document.body.appendChild(styledAlert);
 
 
-                styledAlert.style.display = 'block';
+        styledAlert.style.display = 'block';
 
-                setTimeout(function() {
-                    styledAlert.style.display = 'none';
-                }, 3000);
-            } else {
-               const content = 'Error creating community';
+        setTimeout(function () {
+            styledAlert.style.display = 'none';
+        }, 3000);
+    } else {
+        const content = 'Error creating community';
 
-                let alertMessage =  content;
-                let alertStyle = `
+        let alertMessage = content;
+        let alertStyle = `
             background-color: red;
             color: white;
             border: 1px solid #cc0000;
              border-radius: 15px;
         `;
-                let styledAlert = document.createElement('div');
-                styledAlert.style.cssText = `
+        let styledAlert = document.createElement('div');
+        styledAlert.style.cssText = `
             ${alertStyle}
             position: fixed;
             top: 25%;
@@ -252,21 +258,19 @@ async function goToCommunityDetail(id){
             z-index: 10000;
             display: none;
         `;
-                styledAlert.innerHTML = alertMessage;
+        styledAlert.innerHTML = alertMessage;
 
 
-                document.body.appendChild(styledAlert);
+        document.body.appendChild(styledAlert);
 
 
-                styledAlert.style.display = 'block';
+        styledAlert.style.display = 'block';
 
-                setTimeout(function() {
-                    styledAlert.style.display = 'none';
-                }, 3000);
-            }
-        }
-    });
-
+        setTimeout(function () {
+            styledAlert.style.display = 'none';
+        }, 3000);
+    }
+}
     document.addEventListener("DOMContentLoaded", function () {
         fetchCommunities();
     });
